finished team page

--- a/_config.yml
+++ b/_config.yml
@@ -37,10 +37,14 @@ theme: minimal-mistakes-jekyll
 nav:
   - title: "Home"
     url: /
-  - title: "Team"
+  - title: "People"
     url: /team/
   - title: "Research"
     url: /research/
+  - title: "Publications"
+    url: /publications/
+  - title: "News"
+    url: /news/
     
 # Exclude from processing.
 # The following items will not be processed, by default.
